<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="match_parent" 
    android:layout_height="match_parent" 
    android:background="#FFFFFF">
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center_vertical"
	    android:orientation="vertical">
	    
	    <ImageView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:layout_marginTop="25dp"
	        android:contentDescription="@string/desc_logo_login"
	        android:src="@drawable/ic_launcher"/>
	    
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textColor="@android:color/black"
	        android:text="@string/login_lbl_usuario"/>
	    
	    <EditText 
	        android:id="@+id/login_txtUsuario"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:inputType="text">
	        <requestFocus />
	    </EditText>
	    
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textColor="@android:color/black"
	        android:text="@string/login_lbl_senha"/>
	    
	    <EditText 
	        android:id="@+id/login_txtSenha"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:inputType="textPassword"/>
	    
	    <CheckBox 
	        android:id="@+id/login_chkManterConectado"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textColor="@android:color/black"
	        android:text="@string/pref_manter_logado"/>
	    
	    <Button 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:onClick="entrarOnClick"
	        android:text="@string/login_btn_entrar"/>
	
	</LinearLayout>
</ScrollView>