<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#015488"
            android:orientation="vertical">
            
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/gasto_lbl_title"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold"/>
            
        </LinearLayout>
        
        
        <LinearLayout 
            android:id="@+id/identificadorViagem"
            android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:orientation="vertical" >
            
            <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gasto_lbl_viagem"
            android:textColor="@android:color/black"/>
        
	        <Spinner 
	            android:id="@+id/gasto_spn_viagem"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:prompt="@string/gasto_lbl_viagem"/>
	        
	        <TextView 
	            android:id="@+id/gasto_txt_viagem"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"/>
            
            
        </LinearLayout>
        
        
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gasto_lbl_categoria"
            android:textColor="@android:color/black"/>
        
        <Spinner 
            android:id="@+id/gasto_spn_categoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/gasto_lbl_categoria"/>
        
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="0,1">
            
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
                
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="@string/gasto_lbl_valor" />
                
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"                    
                    android:textColor="@android:color/black"
                    android:text="@string/gasto_lbl_data" />
                
            </TableRow>
            
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
                
                <EditText 
                    android:id="@+id/gasto_txtValor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"/>
                
                <Button 
                    android:id="@+id/gasto_btnData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="selecionarData"
                    android:text="@string/gasto_btnData"/>
                
            </TableRow>
            
        </TableLayout>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black" 
            android:text="@string/gasto_lbl_descricao"/>
	        
        <EditText
            android:id="@+id/gasto_txtDescricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:text="@string/gasto_lbl_local"/>
	        
        <EditText
            android:id="@+id/gasto_txtLocal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
        
        <Button
            android:id="@+id/gasto_btnGravar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gasto_btn_gravar"
            android:onClick="gravarNovoGasto"/>
        
    </LinearLayout>

</ScrollView>
